RE/src/compiler.core/Re_Parser.ts
// Generated from Re_Parser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { Re_ParserListener } from "./Re_ParserListener";
import { Re_ParserVisitor } from "./Re_ParserVisitor";


export class Re_Parser extends Parser {
	public static readonly PROGRAM = 1;
	public static readonly STATIC = 2;
	public static readonly VOID = 3;
	public static readonly PRINT = 4;
	public static readonly INPUT = 5;
	public static readonly RETURN = 6;
	public static readonly FUNCTION = 7;
	public static readonly VAR = 8;
	public static readonly INT_TYPE = 9;
	public static readonly DOUBLE_TYPE = 10;
	public static readonly LONG_TYPE = 11;
	public static readonly SHORT_TYPE = 12;
	public static readonly BOOL_TYPE = 13;
	public static readonly STRING_TYPE = 14;
	public static readonly ARRAY_TYPE = 15;
	public static readonly LIST_TYPE = 16;
	public static readonly QUEUE = 17;
	public static readonly STACK = 18;
	public static readonly PLUS = 19;
	public static readonly MINUS = 20;
	public static readonly MULT = 21;
	public static readonly DIV = 22;
	public static readonly EXP = 23;
	public static readonly ASSIGN = 24;
	public static readonly PLUS_ASSIGN = 25;
	public static readonly MINUS_ASSIGN = 26;
	public static readonly MULT_ASSIGN = 27;
	public static readonly DIV_ASSIGN = 28;
	public static readonly AND_KW = 29;
	public static readonly OR_KW = 30;
	public static readonly NOT_KW = 31;
	public static readonly AND_OP = 32;
	public static readonly OR_OP = 33;
	public static readonly NOT_OP = 34;
	public static readonly IN = 35;
	public static readonly EQ = 36;
	public static readonly NEQ = 37;
	public static readonly GTE = 38;
	public static readonly LTE = 39;
	public static readonly GT = 40;
	public static readonly LT = 41;
	public static readonly DOTDOT = 42;
	public static readonly DOT = 43;
	public static readonly COLON = 44;
	public static readonly SEMI = 45;
	public static readonly COMMA = 46;
	public static readonly LPAREN = 47;
	public static readonly RPAREN = 48;
	public static readonly LBRACE = 49;
	public static readonly RBRACE = 50;
	public static readonly LBRACKET = 51;
	public static readonly RBRACKET = 52;
	public static readonly IF = 53;
	public static readonly ELSE = 54;
	public static readonly FOR = 55;
	public static readonly WHILE = 56;
	public static readonly DO = 57;
	public static readonly INT = 58;
	public static readonly DOUBLE = 59;
	public static readonly STRING = 60;
	public static readonly BOOL = 61;
	public static readonly ID = 62;
	public static readonly WS = 63;
	public static readonly LINE_COMMENT = 64;
	public static readonly BLOCK_COMMENT = 65;
	public static readonly RULE_program = 0;
	public static readonly RULE_function_decl = 1;
	public static readonly RULE_param_list = 2;
	public static readonly RULE_sentence = 3;
	public static readonly RULE_print_statement = 4;
	public static readonly RULE_var_decl = 5;
	public static readonly RULE_var_assign = 6;
	public static readonly RULE_return_statement = 7;
	public static readonly RULE_type_specifier = 8;
	public static readonly RULE_primitive_type = 9;
	public static readonly RULE_list_type = 10;
	public static readonly RULE_array_type = 11;
	public static readonly RULE_collection_type = 12;
	public static readonly RULE_expression = 13;
	public static readonly RULE_function_call = 14;
	public static readonly RULE_method_call = 15;
	public static readonly RULE_argument_list = 16;
	public static readonly RULE_literal = 17;
	public static readonly RULE_if_statement = 18;
	public static readonly RULE_while_statement = 19;
	public static readonly RULE_do_while_statement = 20;
	public static readonly RULE_for_statement = 21;
	public static readonly RULE_for_expression = 22;
	public static readonly RULE_list_elements = 23;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "function_decl", "param_list", "sentence", "print_statement", 
		"var_decl", "var_assign", "return_statement", "type_specifier", "primitive_type", 
		"list_type", "array_type", "collection_type", "expression", "function_call", 
		"method_call", "argument_list", "literal", "if_statement", "while_statement", 
		"do_while_statement", "for_statement", "for_expression", "list_elements",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'program'", "'static'", "'void'", "'print'", "'input'", "'return'", 
		"'function'", "'var'", "'int'", "'double'", "'long'", "'short'", "'bool'", 
		"'string'", "'array'", "'list'", "'queue'", "'stack'", "'+'", "'-'", "'*'", 
		"'/'", "'^'", "'='", "'+='", "'-='", "'*='", "'/='", "'and'", "'or'", 
		"'not'", "'&&'", "'||'", "'!'", "'in'", "'=='", "'!='", "'>='", "'<='", 
		"'>'", "'<'", "'..'", "'.'", "':'", "';'", "','", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'if'", "'else'", "'for'", "'while'", "'do'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "PROGRAM", "STATIC", "VOID", "PRINT", "INPUT", "RETURN", "FUNCTION", 
		"VAR", "INT_TYPE", "DOUBLE_TYPE", "LONG_TYPE", "SHORT_TYPE", "BOOL_TYPE", 
		"STRING_TYPE", "ARRAY_TYPE", "LIST_TYPE", "QUEUE", "STACK", "PLUS", "MINUS", 
		"MULT", "DIV", "EXP", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
		"DIV_ASSIGN", "AND_KW", "OR_KW", "NOT_KW", "AND_OP", "OR_OP", "NOT_OP", 
		"IN", "EQ", "NEQ", "GTE", "LTE", "GT", "LT", "DOTDOT", "DOT", "COLON", 
		"SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
		"IF", "ELSE", "FOR", "WHILE", "DO", "INT", "DOUBLE", "STRING", "BOOL", 
		"ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(Re_Parser._LITERAL_NAMES, Re_Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return Re_Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Re_Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return Re_Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return Re_Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(Re_Parser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, Re_Parser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this.match(Re_Parser.PROGRAM);
			this.state = 49;
			this.match(Re_Parser.ID);
			this.state = 50;
			this.match(Re_Parser.LBRACE);
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.VOID) | (1 << Re_Parser.PRINT) | (1 << Re_Parser.RETURN) | (1 << Re_Parser.VAR) | (1 << Re_Parser.INT_TYPE) | (1 << Re_Parser.DOUBLE_TYPE) | (1 << Re_Parser.LONG_TYPE) | (1 << Re_Parser.SHORT_TYPE) | (1 << Re_Parser.BOOL_TYPE) | (1 << Re_Parser.STRING_TYPE) | (1 << Re_Parser.ARRAY_TYPE) | (1 << Re_Parser.LIST_TYPE) | (1 << Re_Parser.QUEUE) | (1 << Re_Parser.STACK))) !== 0) || ((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & ((1 << (Re_Parser.IF - 53)) | (1 << (Re_Parser.FOR - 53)) | (1 << (Re_Parser.WHILE - 53)) | (1 << (Re_Parser.DO - 53)) | (1 << (Re_Parser.ID - 53)))) !== 0)) {
				{
				this.state = 53;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
				case 1:
					{
					this.state = 51;
					this.sentence();
					}
					break;

				case 2:
					{
					this.state = 52;
					this.function_decl();
					}
					break;
				}
				}
				this.state = 57;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 58;
			this.match(Re_Parser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_decl(): Function_declContext {
		let _localctx: Function_declContext = new Function_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, Re_Parser.RULE_function_decl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 62;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case Re_Parser.INT_TYPE:
			case Re_Parser.DOUBLE_TYPE:
			case Re_Parser.LONG_TYPE:
			case Re_Parser.SHORT_TYPE:
			case Re_Parser.BOOL_TYPE:
			case Re_Parser.STRING_TYPE:
			case Re_Parser.ARRAY_TYPE:
			case Re_Parser.LIST_TYPE:
			case Re_Parser.QUEUE:
			case Re_Parser.STACK:
				{
				this.state = 60;
				this.type_specifier();
				}
				break;
			case Re_Parser.VOID:
				{
				this.state = 61;
				this.match(Re_Parser.VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 64;
			this.match(Re_Parser.ID);
			this.state = 65;
			this.match(Re_Parser.LPAREN);
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.INT_TYPE) | (1 << Re_Parser.DOUBLE_TYPE) | (1 << Re_Parser.LONG_TYPE) | (1 << Re_Parser.SHORT_TYPE) | (1 << Re_Parser.BOOL_TYPE) | (1 << Re_Parser.STRING_TYPE) | (1 << Re_Parser.ARRAY_TYPE) | (1 << Re_Parser.LIST_TYPE) | (1 << Re_Parser.QUEUE) | (1 << Re_Parser.STACK))) !== 0)) {
				{
				this.state = 66;
				this.param_list();
				}
			}

			this.state = 69;
			this.match(Re_Parser.RPAREN);
			this.state = 70;
			this.match(Re_Parser.LBRACE);
			this.state = 74;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.PRINT) | (1 << Re_Parser.RETURN) | (1 << Re_Parser.VAR) | (1 << Re_Parser.INT_TYPE) | (1 << Re_Parser.DOUBLE_TYPE) | (1 << Re_Parser.LONG_TYPE) | (1 << Re_Parser.SHORT_TYPE) | (1 << Re_Parser.BOOL_TYPE) | (1 << Re_Parser.STRING_TYPE) | (1 << Re_Parser.ARRAY_TYPE) | (1 << Re_Parser.LIST_TYPE) | (1 << Re_Parser.QUEUE) | (1 << Re_Parser.STACK))) !== 0) || ((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & ((1 << (Re_Parser.IF - 53)) | (1 << (Re_Parser.FOR - 53)) | (1 << (Re_Parser.WHILE - 53)) | (1 << (Re_Parser.DO - 53)) | (1 << (Re_Parser.ID - 53)))) !== 0)) {
				{
				{
				this.state = 71;
				this.sentence();
				}
				}
				this.state = 76;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 77;
			this.match(Re_Parser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public param_list(): Param_listContext {
		let _localctx: Param_listContext = new Param_listContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, Re_Parser.RULE_param_list);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 79;
			this.type_specifier();
			this.state = 80;
			this.match(Re_Parser.ID);
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === Re_Parser.COMMA) {
				{
				{
				this.state = 81;
				this.match(Re_Parser.COMMA);
				this.state = 82;
				this.type_specifier();
				this.state = 83;
				this.match(Re_Parser.ID);
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sentence(): SentenceContext {
		let _localctx: SentenceContext = new SentenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, Re_Parser.RULE_sentence);
		try {
			this.state = 104;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 90;
				this.var_decl();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 91;
				this.var_assign();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 92;
				this.print_statement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 93;
				this.if_statement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 94;
				this.while_statement();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 95;
				this.do_while_statement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 96;
				this.for_statement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 97;
				this.return_statement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 98;
				this.function_call();
				this.state = 99;
				this.match(Re_Parser.SEMI);
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 101;
				this.method_call();
				this.state = 102;
				this.match(Re_Parser.SEMI);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public print_statement(): Print_statementContext {
		let _localctx: Print_statementContext = new Print_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, Re_Parser.RULE_print_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.match(Re_Parser.PRINT);
			this.state = 107;
			this.match(Re_Parser.LPAREN);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.INPUT) | (1 << Re_Parser.MINUS) | (1 << Re_Parser.NOT_KW))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (Re_Parser.NOT_OP - 34)) | (1 << (Re_Parser.LPAREN - 34)) | (1 << (Re_Parser.LBRACKET - 34)) | (1 << (Re_Parser.INT - 34)) | (1 << (Re_Parser.DOUBLE - 34)) | (1 << (Re_Parser.STRING - 34)) | (1 << (Re_Parser.BOOL - 34)) | (1 << (Re_Parser.ID - 34)))) !== 0)) {
				{
				this.state = 108;
				this.expression(0);
				}
			}

			this.state = 111;
			this.match(Re_Parser.RPAREN);
			this.state = 112;
			this.match(Re_Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public var_decl(): Var_declContext {
		let _localctx: Var_declContext = new Var_declContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, Re_Parser.RULE_var_decl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case Re_Parser.INT_TYPE:
			case Re_Parser.DOUBLE_TYPE:
			case Re_Parser.LONG_TYPE:
			case Re_Parser.SHORT_TYPE:
			case Re_Parser.BOOL_TYPE:
			case Re_Parser.STRING_TYPE:
			case Re_Parser.ARRAY_TYPE:
			case Re_Parser.LIST_TYPE:
			case Re_Parser.QUEUE:
			case Re_Parser.STACK:
				{
				this.state = 114;
				this.type_specifier();
				}
				break;
			case Re_Parser.VAR:
				{
				this.state = 115;
				this.match(Re_Parser.VAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 118;
			this.match(Re_Parser.ID);
			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === Re_Parser.ASSIGN) {
				{
				this.state = 119;
				this.match(Re_Parser.ASSIGN);
				this.state = 120;
				this.expression(0);
				}
			}

			this.state = 123;
			this.match(Re_Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public var_assign(): Var_assignContext {
		let _localctx: Var_assignContext = new Var_assignContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, Re_Parser.RULE_var_assign);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(Re_Parser.ID);
			this.state = 126;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.ASSIGN) | (1 << Re_Parser.PLUS_ASSIGN) | (1 << Re_Parser.MINUS_ASSIGN) | (1 << Re_Parser.MULT_ASSIGN) | (1 << Re_Parser.DIV_ASSIGN))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 127;
			this.expression(0);
			this.state = 128;
			this.match(Re_Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public return_statement(): Return_statementContext {
		let _localctx: Return_statementContext = new Return_statementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, Re_Parser.RULE_return_statement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 130;
			this.match(Re_Parser.RETURN);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.INPUT) | (1 << Re_Parser.MINUS) | (1 << Re_Parser.NOT_KW))) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (Re_Parser.NOT_OP - 34)) | (1 << (Re_Parser.LPAREN - 34)) | (1 << (Re_Parser.LBRACKET - 34)) | (1 << (Re_Parser.INT - 34)) | (1 << (Re_Parser.DOUBLE - 34)) | (1 << (Re_Parser.STRING - 34)) | (1 << (Re_Parser.BOOL - 34)) | (1 << (Re_Parser.ID - 34)))) !== 0)) {
				{
				this.state = 131;
				this.expression(0);
				}
			}

			this.state = 134;
			this.match(Re_Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public type_specifier(): Type_specifierContext {
		let _localctx: Type_specifierContext = new Type_specifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, Re_Parser.RULE_type_specifier);
		try {
			this.state = 140;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case Re_Parser.INT_TYPE:
			case Re_Parser.DOUBLE_TYPE:
			case Re_Parser.LONG_TYPE:
			case Re_Parser.SHORT_TYPE:
			case Re_Parser.BOOL_TYPE:
			case Re_Parser.STRING_TYPE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 136;
				this.primitive_type();
				}
				break;
			case Re_Parser.LIST_TYPE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 137;
				this.list_type();
				}
				break;
			case Re_Parser.ARRAY_TYPE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 138;
				this.array_type();
				}
				break;
			case Re_Parser.QUEUE:
			case Re_Parser.STACK:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 139;
				this.collection_type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public primitive_type(): Primitive_typeContext {
		let _localctx: Primitive_typeContext = new Primitive_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, Re_Parser.RULE_primitive_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 142;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << Re_Parser.INT_TYPE) | (1 << Re_Parser.DOUBLE_TYPE) | (1 << Re_Parser.LONG_TYPE) | (1 << Re_Parser.SHORT_TYPE) | (1 << Re_Parser.BOOL_TYPE) | (1 << Re_Parser.STRING_TYPE))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public list_type(): List_typeContext {
		let _localctx: List_typeContext = new List_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, Re_Parser.RULE_list_type);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			this.match(Re_Parser.LIST_TYPE);
			this.state = 145;
			this.match(Re_Parser.LT);
			this.state = 146;
			this.primitive_type();
			this.state = 147;
			this.match(Re_Parser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public array_type(): Array_typeContext {
		let _localctx: Array_typeContext = new Array_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, Re_Parser.RULE_array_type);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(Re_Parser.ARRAY_TYPE);
			this.state = 150;
			this.match(Re_Parser.LT);
			this.state = 151;
			this.primitive_type();
			this.state = 152;
			this.match(Re_Parser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public collection_type(): Collection_typeContext {
		let _localctx: Collection_typeContext = new Collection_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, Re_Parser.RULE_collection_type);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			_la = this._input.LA(1);
			if (!(_la === Re_Parser.QUEUE || _la === Re_Parser.STACK)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 155;
			this.match(Re_Parser.LT);
			this.state = 156;
			this.primitive_type();
			this.state = 157;
			this.match(Re_Parser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}
